--- a/INSTALL
+++ b/INSTALL
@@ -134,6 +134,11 @@ this:
                  CXX="g++ -arch i386 -arch x86_64 -arch ppc -arch ppc64" \
                  CPP="gcc -E" CXXCPP="g++ -E"
 
+     UPDATE: Now that we are beyond ppc architectures, the configure command
+     should actually be:
+
+     ./configure CC="gcc -arch i386 -arch x86_64" CXX="g++ -arch i386 -arch x86_64" CPP="gcc -E" CXXCPP="g++ -E"
+
    This is not guaranteed to produce working output in all cases, you
 may have to build one architecture at a time and combine the results
 using the `lipo' tool if you have problems.
